--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.0",
+    "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
+    "react-paypal-button-v2": "^2.6.2",
+    "react-paginate": "^7.0.0",
+    "react-redux": "^7.2.2",
+    "react-router-redux": "^4.0.8",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
+    "react-router-bootstrap": "^0.26.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +51,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "history": "^5.2.0",
+    "react-paginate": "^8.1.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1"
   }
 }
